# amplify-boilerplate

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  amplify.yml  biome.json  devenv.nix  doppler.yaml  project.code-workspace  skills-lock.json
.agent/: AGENT.md
.agent/rules/: architecture.md  auto-generated.md  code-style.md  command-guidelines.md  date-time-handling.md  debugging.md  development-commands.md  environment.md  index.md  package-management.md  special-notes.md  supabase-config.md  testing.md  ui-implementation.md
.agents/skills/debugging/: SKILL.md
.agents/skills/doppler/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: quality-checker.md  task-executor.md
.claude/hooks/: quality-check.sh  session-start.sh
.claude/memory/: MEMORY.md  feedback_use_make_commands.md  project_devenv_up_default.md
.claude/rules/: auto-generated.md  aws-first.md  backend-architecture.md  backend-py.md  commands.md  database.md  datetime.md  edge-functions.md  error-handling.md  frontend.md  generative-ai.md  mcp-doppler.md  mcp-supabase.md  page-navigation.md  python-monorepo.md  render-optimization.md  skills-first.md  supabase-config.md  supabase-first.md  tdd.md  ui-testing.md
.claude/skills/: agents-build  agents-connect  agents-debug  agents-deploy  agents-get-started  agents-harden  agents-optimize  amazon-aurora-mysql  amazon-aurora-postgresql  amazon-bedrock  amazon-documentdb  amazon-elasticache  amazon-keyspaces  amazon-opensearch-service  aws-blocks  aws-cleanrooms  aws-containers  aws-iam  aws-lambda-durable-functions  aws-lambda-managed-instances  aws-lambda-microvms  aws-messaging-and-streaming  aws-observability  aws-sdk-js-v3-usage  aws-sdk-swift-usage  aws-transform  configuring-vpc-endpoints-for-private-aws-service-access  connecting-lambda-to-api-gateway  connecting-lambda-to-dynamodb  connecting-to-data-source  connecting-vpcs-with-peering  creating-amazon-aurora-db-cluster-with-instances  creating-api-gateway-stage  creating-data-lake-table  creating-ec2-image-builder-pipeline  creating-production-vpc-multi-az  creating-secrets-using-best-practices  debugging-lambda-timeouts  deploying-custom-domain-rest-api  developing-applications-on-managed-service-for-apache-flink  (+28 more)
.claude/skills/amplify-gen2/: SKILL.md
.claude/skills/datetime/: SKILL.md
.claude/skills/debugging/: SKILL.md
.claude/skills/detailed-design/: SKILL.md
.claude/skills/dev-check/: SKILL.md
.claude/skills/devenv-cicd/: SKILL.md
.claude/skills/drizzle/: SKILL.md
.claude/skills/e2e-auth/: SKILL.md
.claude/skills/edge-functions-mcp/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/gluestack/: guidance.md
.claude/skills/hey-api/: SKILL.md
.claude/skills/logger/: SKILL.md
.claude/skills/maestro/: SKILL.md
.claude/skills/monorepo/: SKILL.md  examples.md  packages.md
.claude/skills/pencil-design/: SKILL.md
.claude/skills/rls/: SKILL.md
.codex/: AGENTS.md
.cursor/: mcp.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.maestro/scripts/: cleanup-test-user.js  get-otp-from-email.js  get-otp-from-mailpit.js  setup-test-user.js
backend-py/: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
backend-py/apps/api/: README.md  pyproject.toml  railpack.json  railway.toml
backend-py/apps/api/src/api/: app.py  lambda_handler.py  main.py
backend-py/apps/api/src/api/controller/: __init__.py  base_controller.py
backend-py/apps/api/src/api/domain/: __init__.py  exceptions.py
backend-py/apps/api/src/api/domain/const/: error_messages.py
backend-py/apps/api/src/api/domain/entity/: __init__.py
backend-py/apps/api/src/api/gateway/: __init__.py
backend-py/apps/api/src/api/infra/: __init__.py  db_client.py
backend-py/apps/api/src/api/middleware/: __init__.py  auth_middleware.py  logging_middleware.py
backend-py/apps/api/src/api/usecase/: __init__.py
backend-py/apps/api/tests/: test_health.py  test_logging_middleware.py
backend-py/apps/mcp/: README.md  pyproject.toml
backend-py/apps/mcp/src/mcp_server/: __init__.py  main.py
backend-py/apps/mcp/tests/: test_tools.py
docs/: claude-code-on-the-web-setup.md
docs/_research/: 2026-02-10-devenv-sh.md  2026-02-11-drizzle-orm-pg-extensions.md  2026-03-31-ui-ux-design-best-practices.md  2026-04-06-shadcn-ui-tailwindcss-v4-setup.md  2026-04-27-devenv-tasks.md  2026-04-28-devenv-process-start-enable.md  2026-04-28-devenv-quality-checks.md  2026-04-28-drizzle-v1-migration.md  2026-04-28-monorepo-best-practices.md
docs/deployment/: email-templates.md
drizzle/: AGENTS.md  README.md  biome.json  drizzle.config.ts  migrate.ts  package.json
drizzle/migrations/: 0000_breezy_owl.sql
drizzle/schema/: index.ts  schema.ts
drizzle/seed/: index.ts
env/: README.md
frontend/: .cursorrules  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/docs/: i18n.md  rendering-strategy.md
knowledge/: devenv-ultimate-dev-environment.md
scripts/: cloud-setup.sh  setup-web-env.sh  sync-mcp.ts
scripts/supabase/: deploy-functions.sh  deploy.sh  link.sh
supabase/functions/: AGENTS.md  README.md  deno.json
supabase/tests/: 000-setup-tests-hooks.sql  README.md
tasks/: 0000-fix-tailwind-source-paths.md  0001-rename-ui-web-to-ui.md  0002-rename-ui-mobile-to-native-ui.md  0003-flatten-workspaces-glob.md  0004-dedup-cn-utility.md  0005-postcss-config-shadcn-official.md  0006-turbo-remove-build-deps.md  0007-turbo-boundaries-and-tags.md  0008-per-package-turbo-json.md  0009-root-tsconfig-references.md  0010-tooling-exports-field.md  0011-update-claude-md-and-rules.md  0099-fix-pre-existing-type-errors.md
(+166 files in other folders)
