[project]
name = "backend-py-workspace"
version = "0.0.0"
description = "uv workspace root for backend-py (api + mcp + shared packages)"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
core = { workspace = true }
api = { workspace = true }
mcp-server = { workspace = true }

[dependency-groups]
dev = [
    # Linting & Formatting & Type Checking
    "ruff",
    "mypy",

    # Testing
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "testcontainers[postgres]",
    "httpx",
]

# ---------- ruff ----------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",   # missing type self and cls
    "D1",     # undocumented
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
    "PD011",  # pandas use of dot values
    "B008",
    "COM812", # conflicts with formatter
    "TC",     # flake8-type-checking: pydantic/SQLModel evaluate annotations at runtime
]
unfixable = [
    "F401",   # unused import
    "F841",   # unused variable
    "ERA001", # commented out code
]

logger-objects = ["core.logging.LOGGER"]

[tool.ruff.lint.per-file-ignores]
# テストコード固有の許容: assert は当然、fixture/型注釈/import 規則は緩める
"**/tests/**/*.py" = [
    "S101",    # assert は pytest テストで必須
    "ANN001",  # 関数引数の型注釈 (pytest fixture は推論で十分)
    "ANN201",  # 戻り値の型注釈 (テスト関数は None 固定)
    "ANN202",  # 内部関数の戻り値型注釈
    "ANN401",  # Any 型 (テストでは許容)
    "ARG002",  # 未使用引数 (pytest fixture 名で注入)
    "PLR2004", # マジックナンバー (200, 500 等の HTTP ステータス)
    "PLC0415", # トップレベル import (importlib.reload を伴うテストで必要)
    "F401",    # 未使用 import (テストで一時的に存在することがある)
    "F841",    # 未使用変数 (テストで意図的に存在することがある)
    "INP001",  # implicit namespace package: ワークスペース上の tests/ は意図的に __init__.py を持たない (pytest rootdir モード + 名前衝突回避)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["api", "core", "mcp_server"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.mccabe]
max-complexity = 3

# ---------- mypy ----------
[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = "apps/api/src:packages/core/src:apps/mcp/src"
exclude = [
    '^\.venv/',
    '/tests/',
]
strict = true
ignore_missing_imports = true
install_types = true
non_interactive = true

# ---------- pytest ----------
# src-layout + editable install (uv sync --all-packages) の組み合わせで動くため、
# `pythonpath` は **設定しない**。`--import-mode=importlib` が公式推奨 (pytest docs)。
# editable install が `apps/api/src` / `packages/core/src` を sys.path に載せるので、
# `pythonpath` を重ねて指定するのは flat-layout のワークアラウンドであり src-layout と冗長。
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["apps/api/tests", "apps/mcp/tests", "packages/core/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# coverage は default 外し: 複数 src ルートに対応するため CLI で明示する運用。
# 例: uv run pytest --cov=apps/api/src/api --cov=packages/core/src/core --cov-report=term-missing
addopts = "-ra -q --import-mode=importlib"
asyncio_mode = "auto"
