[project]
name = "api"
version = "0.1.0"
description = "FastAPI + Supabase auth boilerplate"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi",
    "starlette",
    "uvicorn[standard]",
    # DB / auth
    "supabase",
    "sqlmodel",
    "psycopg2-binary",
    # Shared workspace package
    "core",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.fastapi]
# Used by `fastapi dev` / `fastapi run`. With the workspace editable install,
# `api.app:app` resolves natively (no PYTHONPATH manipulation needed).
entrypoint = "api.app:app"
