[project]
name = "api"
version = "0.1.0"
description = "FastAPI boilerplate (AWS Amplify / Lambda)"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi",
    "starlette",
    "uvicorn[standard]",
    # AWS Lambda adapter (ASGI -> Lambda) for Amplify custom function
    "mangum",
    # Cognito JWT verification
    "pyjwt[crypto]",
    # Shared workspace package
    "core",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.fastapi]
# Used by `fastapi dev` / `fastapi run`. With the workspace editable install,
# `api.app:app` resolves natively (no PYTHONPATH manipulation needed).
entrypoint = "api.app:app"
