[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server skeleton (not yet implemented)"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
