[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP-based MCP server (backend-py monorepo)"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "core",
]

[project.scripts]
mcp-server = "mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
